--- a/resource/config.yaml
+++ b/resource/config.yaml
@@ -1,30 +1,4 @@
 useLogging: True
-logging:
-  version: 1
-
-  formatters:
-    simple:
-      format: '%(message)s'
-
-  handlers:
-    console:
-      class: logging.StreamHandler
-      level: INFO
-      formatter: simple
-    file:
-      class: logging.FileHandler
-      filename: logging.log
-      level: INFO
-      formatter: simple
-
-  loggers:
-    StreamLogger:
-      handlers: [console]
-      level: INFO
-
-#    FileLogger:
-#      handlers: [console,file]
-#      level: INFO
 
 mysql:
   user: awen
@@ -45,3 +19,4 @@ sqlalchemy:
   echo: True
   pool_size: 10
   max_overflow: 10
+  connect_args: {'connect_timeout': 10}
