--- a/resource/config.yaml
+++ b/resource/config.yaml
@@ -21,3 +21,8 @@ sqlalchemy:
   pool_size: 10
   max_overflow: 10
   connect_args: {'connect_timeout': 10}
+
+
+model:
+  name: 'material_matching'
+
